--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,13 @@
 # Site settings
-title: Your awesome title
-motto: Your motto
-email: your-email@domain.com
+title: WISE R Club
+motto: We R Together
+email: xmuwiserclub@163.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  WISE R Club.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+
+github_username:  wise-r
 
 # Build settings
 markdown: kramdown
