--- a/_config.yml
+++ b/_config.yml
@@ -5,26 +5,22 @@ paginate_path: "page:num"
 exclude: ["README.md"] # files to exclude
 highlighter: pygments
 markdown: kramdown
-disqus: dbyll
-google_analytics: dbyll
+disqus: wise-r
 
 defaults:
   -
     scope:
       path: "" # empty string for all files
     values:
-      title: dbyll
+      title: WISER Club
 
-description: Stylish Jekyll Theme
+description: WISE R Club is a study group in WISE set up by Xiaojun Sun and Xi Liu in Jun 20, 2014. 
+It's a place where you can find people to learn R together. It's free and self-motivated.
 author:
-  name: dbyll
-  email: dbyll@ismaildemirbilek.com
-  github: dbtek
-  twitter: dbtek
-  pinterest: asd123
-  linkedin: asd123
-  bio: Your stylish, minimalist theme!
-  email_md5: 726351295ec82e145928582f595aa3aa
+  name: WISER Club
+  email: xmuwiserclub@163.com
+  github: wise-r
+  bio: We R together!
 
 rss_path: feed.xml
 categories_path: categories.html
