--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ disqus: wise-r
 defaults:
   -
     scope:
-      path: "" # empty string for all files
+      path: "" # empty string for  files
     values:
       title: WISER Club
 
