Revert "source tree test"
This reverts commit cece8b7c0fee5eb3beeb6ae3068c82c4026eb4bc.

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ disqus: wise-r
 defaults:
   -
     scope:
-      path: "" # empty string for  files
+      path: "" # empty string for all files
     values:
       title: WISER Club
 
