--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ author:
   name: WISER Club
   email: xmuwiserclub@163.com
   github: wise-r
-  bio: WISE R Club is a study group in WISE set up by Xiaojun Sun and Xi Liu in Jun 20, 2014. It's a place where you can find people to learn R together. It's free and self-motivated.
+  bio: WISE R Club a place where you can find people to learn R together. It's free and self-motivated.
 
 rss_path: feed.xml
 categories_path: categories.html
