--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ author:
   name: WISER Club
   email: xmuwiserclub@163.com
   github: wise-r
-  bio: WISE R Club a place where you can find people to learn R together. It's free and self-motivated.
+  bio: WISE R Club a place where you can find people to learn R together.
 
 rss_path: feed.xml
 categories_path: categories.html
